# data-structures

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxygen.conf
inc/: AlignedAllocator.h  PoolAllocator.h  test.h
inc/PoolAllocator/: _local_pool.h  _node.h  _pool_allocator.h  _shared_pool.h
test/: AlignedAllocator.cpp  PoolAllocator.cpp  test.cpp
